# GDmod

./: CMakeLists.txt  README.md  changelog.md  mod.json  start.bat  update.bat
resources/: APISheet-hd.plist  APISheet-uhd.plist  APISheet.plist  BlankSheet-hd.plist  BlankSheet-uhd.plist  BlankSheet.plist  LogoSheet-hd.plist  LogoSheet-uhd.plist  LogoSheet.plist  about.md  mdFont-hd.fnt  mdFont-uhd.fnt  mdFont.fnt  mdFontB-hd.fnt  mdFontB-uhd.fnt  mdFontB.fnt  mdFontBI-hd.fnt  mdFontBI-uhd.fnt  mdFontBI.fnt  mdFontI-hd.fnt  mdFontI-uhd.fnt  mdFontI.fnt  mdFontMono-hd.fnt  mdFontMono-uhd.fnt  mdFontMono.fnt  mod.json  support.md
src/: main.cpp
